--- a/CreatureTeacher/Views/Shared/_Parent1.cshtml
+++ b/CreatureTeacher/Views/Shared/_Parent1.cshtml
@@ -1,13 +1,14 @@
 @{  
-  string bodyImagePath = Url.Content("../img/creatureImages/bodies/" + @ViewBag.Parent1Body + ".png");
-  string eyeImagePath = Url.Content("../img/creatureImages/eyes/" + @ViewBag.Parent1Eye + ".png");
-  string mouthImagePath = Url.Content("../img/creatureImages/mouths/" + @ViewBag.Parent1Mouth + ".png");
-  string headImagePath = Url.Content("../img/creatureImages/hair/" + @ViewBag.Parent1Head + ".png");
-  string tailImagePath = Url.Content("../img/creatureImages/tails/" + @ViewBag.Parent1Tail + ".png");
+  string bodyImagePath = Url.Content("../img/creatureImages/bodies/" + @ViewBag.Parent1Body);
+  string eyeImagePath = Url.Content("../img/creatureImages/eyes/" + @ViewBag.Parent1Eye);
+  string mouthImagePath = Url.Content("../img/creatureImages/mouths/" + @ViewBag.Parent1Mouth);
+  string headImagePath = Url.Content("../img/creatureImages/hair/" + @ViewBag.Parent1Head);
+  string tailImagePath = Url.Content("../img/creatureImages/tails/" + @ViewBag.Parent1Tail);
 }
-<div class="format-creature">
-  <img src="@bodyImagePath" width="500" id="body">
-  <img src="@eyeImagePath" width="500" id="eye">
-  <img src="@mouthImagePath" width="500" id="mouth">
-  <img src="@tailImagePath" width="500" id="tail">
-</div>
+
+    <div class="format-creature">
+      <img src="@bodyImagePath" width="500" id="bodyImg">
+      <img src="@eyeImagePath" width="500" id="eyeImg">
+      <img src="@mouthImagePath" width="500" id="mouthImg">
+      <img src="@tailImagePath" width="500" id="tailImg">
+    </div>
