--- a/CreatureTeacher/Views/Shared/_Layout.cshtml
+++ b/CreatureTeacher/Views/Shared/_Layout.cshtml
@@ -25,8 +25,9 @@
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation -->
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="/Creatures">Your Creatures</a>
+        <a class="mdl-navigation__link" href="/Creatures/Learn">Get Started</a>
         <a class="mdl-navigation__link" href="/Creatures/Create">Build New Creature</a>
+        <a class="mdl-navigation__link" href="/Creatures">Creature Collection</a>
         <a class="mdl-navigation__link" href="/Creatures/CreateChild">Create Baby Creature</a>
       </nav>
     </div>
@@ -34,8 +35,9 @@
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">Creature Teacher</span>
     <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="/Creatures">Your Creatures</a>
+        <a class="mdl-navigation__link" href="/Creatures/Learn">Get Started</a>
         <a class="mdl-navigation__link" href="/Creatures/Create">Build New Creature</a>
+        <a class="mdl-navigation__link" href="/Creatures">Creature Collection</a>
         <a class="mdl-navigation__link" href="/Creatures/CreateChild">Create Baby Creature</a>
     </nav>
   </div>
