add splash page images, update secondary color scheme, add images to learn page, update create baby functions
Co-authored-by: Matt Taylor <taylor.matt@protonmail.com>
Co-authored-by: spodolak <stephpodolak@gmail.com>
Co-authored-by: Jeremy Kale Padot <jeremy@padot.us>

--- a/CreatureTeacher/Views/Creatures/Create.cshtml
+++ b/CreatureTeacher/Views/Creatures/Create.cshtml
@@ -192,14 +192,14 @@
 								<td class="mdl-data-table__cell--non-numeric"></td>
 							</tr>?
 							<tr>
-								<td class="mdl-data-table__cell--non-numeric">A ? A (Crimson)</td>
+								<td class="mdl-data-table__cell--non-numeric">G ? A (Orange)</td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
 							</tr>
 							<tr>
-								<td class="mdl-data-table__cell--non-numeric">A ? G (Purple)</td>
+								<td class="mdl-data-table__cell--non-numeric">G ? G (Red)</td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
