--- a/CreatureTeacher/Views/Creatures/CreateChild.cshtml
+++ b/CreatureTeacher/Views/Creatures/CreateChild.cshtml
@@ -54,11 +54,8 @@
   </div>
 </div>
 
-<a href='@Url.Action("Details","Creatures", new { newBabyId = @ViewBag.NewBabyId})'>
+<a href='@Url.Action("Details","Creatures", new { id = @ViewBag.NewBabyId})'>
   <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
     Breed those Bad Mamma Jammas
   </button>
 </a>
-
-
-
