--- a/CreatureTeacher/Views/Creatures/Index.cshtml
+++ b/CreatureTeacher/Views/Creatures/Index.cshtml
@@ -8,6 +8,8 @@
 
 
 <h1>Your Creature Friends!</h1>
+<h2>Click on a buddy to see their codons!</h2>
+
 @if (@Model.Count == 0)
 {
   <p>Make a New Creature!</p>
