--- a/CreatureTeacher/Views/Creatures/Learn.cshtml
+++ b/CreatureTeacher/Views/Creatures/Learn.cshtml
@@ -11,7 +11,7 @@
       <p>The genetic code is the set of rules by which information encoded within genetic material (DNA or mRNA sequences) is translated into proteins by living cells. Biological decoding is done by the ribosome. This links amino acids together in an order specified by mRNA. It uses transfer RNA (tRNA) molecules to carry amino acids and to read the mRNA. The molecules read the mRNA three nucleotides at a time. These nucleotide triplets are called codons. A codon specifies which amino acid will be added next during protein synthesis. There are some exceptions, but usually a three-nucleotide codon represents a single amino acid.</p>
     </div>
     <div class="mdl-cell mdl-cell--4-col">
-      <img src="../../img/dna.png" width="250">
+      <img src="../../img/pokemon-steph.png" width="400">
     </div>
   </div>
 
@@ -22,6 +22,17 @@
     <div class="mdl-cell mdl-cell--8-col">
       <h2>How do codons work?</h2>
       <p>I don't actually know! Do you? Can you tell me?</p>
+    </div>
+  </div>
+</div>
+
+  <div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--8-col">
+      <h2>Dominant and Recessive Codons</h2>
+      <p>What's up with these?</p>
+    </div>
+    <div class="mdl-cell mdl-cell--4-col">
+      <img src="../../img/DominanceTable.png" width="400">
     </div>
   </div>
 </div>
