--- a/CreatureTeacher/Views/Home/Index.cshtml
+++ b/CreatureTeacher/Views/Home/Index.cshtml
@@ -3,8 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Creature Teacher</h1>
-    <h3>Learn About DNA and Make New Friends</h3>
-    <img src="../img/creatureImages/bodies/creature-test.png" width="500">
+    <!-- <h1 class="display-4">Creature Teacher</h1> -->
+    <!-- <h3>Learn About DNA and Make New Friends!</h3> -->
+    <img class="splashTop" src="../img/CreatureTeacher.png" width="700">
+    <img class="splash" src="../img/splash2.png" width="1200">
+     <!-- <h3>Learn About DNA and Make New Friends!</h3> -->
 
 </div>
