--- a/CreatureTeacher/Views/Shared/_Layout.cshtml
+++ b/CreatureTeacher/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - CreatureTeacher</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.lime-pink.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.lime-red.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
   <header class="mdl-layout__header mdl-layout__header--colored">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title">
+      <span class="mdl-layout-title logo">
         <a href="/">Creature Teacher</a>
       </span>
       <!-- Add spacer, to align navigation to the right -->
@@ -33,7 +33,7 @@
     </div>
   </header>
   <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Creature Teacher</span>
+    <span class="mdl-layout-title logo">Creature Teacher</span>
     <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="/Creatures/Learn">Get Started</a>
         <a class="mdl-navigation__link" href="/Creatures/Create">Build New Creature</a>
